--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "uglify-es": "^3.3.8"
   }
 }
