--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
+    "chart.js": "^2.8.0",
+    "chartist": "^0.11.3",
+    "chartist-plugin-pointlabels": "^0.0.6",
+    "chartjs-plugin-datalabels": "^0.6.0",
     "grunt": "^1.0.4",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-uglify": "^4.0.1",
-    "grunt-contrib-uglify-es": "^3.3.0"
+    "grunt-contrib-uglify-es": "^3.3.0",
+    "uglify-es": "^3.3.9"
   }
 }
