proper uglifying and minifying

--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "grunt": "^1.0.4",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-uglify": "^4.0.1"
+    "grunt-contrib-uglify-es": "^3.3.0"
   }
 }
