--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "chartist": "^0.11.3",
     "chartist-plugin-pointlabels": "^0.0.6",
     "chartjs-plugin-datalabels": "^0.6.0",
+    "debug": "^4.1.1",
     "grunt": "^1.0.4",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-uglify-es": "^3.3.0"
+    "grunt-contrib-uglify-es": "^3.3.0",
+    "grunt-template": "^1.0.0"
   }
 }
