--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "chartist": "^0.11.3",
     "chartist-plugin-pointlabels": "^0.0.6",
     "chartjs-plugin-datalabels": "^0.6.0",
+    "choices.js": "^9.0.1",
     "debug": "^4.1.1",
-    "grunt": "^1.0.4",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-uglify-es": "^3.3.0",
-    "grunt-template": "^1.0.0"
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-terser": "^1.2.0",
+    "picolog": "^1.0.4"
   }
 }
