--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-html-replace": "^1.6.2",
+    "gulp-inject-string": "^1.1.2",
     "gulp-terser": "^1.2.0",
+    "gulp-useref": "^4.0.1",
     "picolog": "^1.0.4"
   }
 }
