--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.1",
+    "gulp-rm": "^2.0.0",
     "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2"
