--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@rollup/plugin-replace": "^3.0.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-cleanhtml": "^1.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-git": "^2.10.1",
