--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-rm": "^2.0.0",
     "gulp-terser": "^1.2.0",
     "gulp-useref": "^4.0.1",
+    "gulp-wrap": "^0.15.0",
     "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -20,6 +21,7 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-markercluster": "^0.2.2",
     "leaflet.heat": "^0.2.0",
     "simple-lightbox": "^2.1.0",
     "simplelightbox": "^2.14.2"
