--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-rm": "^2.0.0",
     "gulp-terser": "^1.2.0",
     "gulp-useref": "^4.0.1",
+    "gulp-wrap": "^0.15.0",
     "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
