--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "yargs": "^17.3.1"
   },
   "dependencies": {
+    "h3-js": "^4.1.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
-    "leaflet-markercluster": "^0.2.2",
+    "leaflet-easybutton": "^2.4.0",
     "leaflet.heat": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
+    "leaflet.vectorgrid": "^1.3.0",
     "simple-lightbox": "^2.1.0",
     "simplelightbox": "^2.14.2"
   }
